--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.2.0",
+    "eslint": "8.22.0",
     "formik": "^2.2.9",
     "gsap": "^3.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "^2.1.3",
-    "sass": "^1.57.0",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
