--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.2.0",
+    "csstype": "^3.1.1",
     "eslint": "8.22.0",
     "formik": "^2.2.9",
     "gsap": "^3.11.4",
