--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "gsap": "^3.11.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -57,5 +58,8 @@
     "network"
   ],
   "author": "RusKom",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/moment": "^2.13.0"
+  }
 }
